# parcel

./: .gitignore  Cargo.toml  Parcel.md  README.md
.github/workflows/: ci.yml
src/: actions.rs  archive.rs  artifact.rs  build.rs  cli.rs  commands.rs  delta.rs  install.rs  installer.rs  layout.rs  main.rs  models.rs  packages.rs  parcel_manifest.rs  paths.rs  receipt.rs  repo.rs  repositories.rs  resolver.rs  storage.rs  version.rs
src/utils/: arch.rs  hash.rs  mod.rs
