[package]
name = "parcel"
version = "0.1.0"
edition = "2024"
description = "A Linux user-space package manager for desktop applications and developer tools."

[features]
default = []
build = []

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3.10"
ureq = { version = "2.10", features = ["tls"] }
walkdir = "2.5"
xz2 = "0.1"
zstd = "0.13"
