[package]
name = "parcel"
version = "0.1.0"
edition = "2024"
description = "A Linux user-space package manager for desktop applications and developer tools."

[features]
default = ["build"]
build = []

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tar = "0.4"
walkdir = "2.5"
zstd = "0.13"
